interface complete. must fix word wrap. calculation incomplete

--- a/style.css
+++ b/style.css
@@ -1,23 +1,26 @@
 .body {
+  display: flex;
   width: 70vw;
   margin: auto;
   background-color: skyblue;
   flex-shrink: 5;
   justify-content: center;
+  align-items: center;
+  position: relative;
 }
 
 .buttonContainer {
   margin-top: 10%;
   font-size: 5em;
-  padding: 2%;
+  padding: 5%;
   min-height: 100px;
-  width: 75%;
+  width: 300px;
   background: LightGray;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: repeat(7, 1fr);
   grid-gap: 10px;
-  justify-content: center;
+  justify-content: space-evenly;
   align-self: center;
   border-style: solid;
   border-color: black;
@@ -27,7 +30,7 @@ button {
   font-size: 0.44em;
 }
 
-#clearbtn {
+#clearBtn {
   grid-area: 2/1/4/5;
   height: 60%;
   margin-top: 1px;
@@ -47,4 +50,5 @@ button {
   font-size: .3em;
   justify-content: flex-end;
   font-family: 'Press Start 2P', cursive;
+  /* flex-wrap: wrap; */
 }
